new branch commit

--- a/homework.html
+++ b/homework.html
@@ -298,15 +298,12 @@
 
 			document.getElementById("mygif").src=gif;
 		}
-
-		<h2> Head Learning </h2>
-		
-
-
-
-
 					
 		</script>
+
+				<h2>Head Learning</h2>
+				<p> Just to check changes </p>
+
 
 
 		</body>
