mt first branch commit

--- a/homework.html
+++ b/homework.html
@@ -301,8 +301,10 @@
 					
 		</script>
 
-				<h2>Head Learning</h2>
+				<h2>Head Learning start</h2>
 				<p> Just to check changes </p>
+				<p>how it's shows</p>
+				<p>lets see</p>
 
 
 
